--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Shadow Gunn</title>
+	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
 <h1> Hello </h1>
