--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-	<a href="https://unscnerf.com">Go to one of my websites i made!</a>
 <h1> Hello </h1>
-<p>we are still makeing this site come back later</p>
+<h2>we are still makeing this site come back later</h2>
+<a href="https://unscnerf.com">Go to one of my websites i made!</a>
+<button href="https://unscnerf.com">This is the same website</button>
 </body>
 </html>
