--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <h1> Hello </h1>
 <h2>we are still makeing this site come back later</h2>
 <a href="https://unscnerf.com">Go to one of my websites i made!</a>
-<button href="https://unscnerf.com">This is the same website</button>
+<button type="button" href="https://unscnerf.com">This is the same website</button>
 </body>
 </html>
