--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1> Hello </h1>
 <h2>we are still makeing this site come back later</h2>
-<embed src="https://zoom.us/wc/5211571719/start"></embed>
+<embed src="https://zoom.us/wc/5211571719/start" style="width:500px; height: 300px;></embed>
 </body>
 </html>
