--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1> Hello </h1>
 <h2>we are still makeing this site come back later</h2>
-<iframe src="https://zoom.us/signin"></iframe>
+<iframe src="https://zoom.us/signin" width="100%" height="300"></iframe>
 </body>
 </html>
