--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Shadow Gunn</title>
+	<title>Support</title>
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-<h1> Hello </h1>
-<h2>we are still makeing this site come back later</h2>
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">WebSiteName</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="index.html">Home</a></li>
+      <li><a href="zoom.html">zoom</a></li>
+    </ul>
+  </div>
+</nav>
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
