--- a/zoom.html
+++ b/zoom.html
@@ -20,8 +20,8 @@
       <a class="navbar-brand" href="#">WebSiteName</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="zoom.html">zoom</a></li>
+      <li class="active"><a href="zoom.html">Zoom</a></li>
+      <li><a href="index.html">Home</a></li>
     </ul>
   </div>
 </nav>
