--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="index.html">Home</a></li>
-      <li><a href="zoom.html">zoom</a></li>
+      <li><a href="zoom.html">Zoom</a></li>
     </ul>
   </div>
 </nav>
