--- a/zoom.html
+++ b/zoom.html
@@ -25,7 +25,7 @@
     </ul>
   </div>
 </nav>
-	<button href="https://zoom.us/wc/5211571719/start">Goto Zoom Meeting</button>
+	<a href="https://zoom.us/wc/5211571719/start" class="btn">Goto Zoom Meeting</a>
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
