--- a/zoom.html
+++ b/zoom.html
@@ -25,7 +25,7 @@
     </ul>
   </div>
 </nav>
-	<a href="https://us04web.zoom.us/wc/830103497/join?track_id=&jmf_code=&meeting_result=&wpk=wcpkb0e21fbc85d6c3f80b8ab2775495540a" class="btn btn-default">Goto Zoom Meeting</a>
+	<a href="https://zoom.us/join" class="btn btn-default">Goto Zoom Meeting</a>
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
