--- a/zoom.html
+++ b/zoom.html
@@ -26,8 +26,7 @@
   </div>
 </nav>
 	<a href="https://zoom.us/join" class="btn btn-default">Goto Zoom Meeting</a>
-<iframe src="https://calendar.google.com/calendar/embed?src=tylerjgunn%40gmail.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-	
+<iframe src="https://calendar.google.com/calendar/embed?height=500&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=bTU0dWYxMGk1aW52NGwxbmpxbjAyamhoZGtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23A79B8E" style="border:solid 1px #777" width="700" height="500" frameborder="0" scrolling="no" align="center"></iframe>
 
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
