This is a update

--- a/zoom.html
+++ b/zoom.html
@@ -16,19 +16,24 @@
 <body>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
-    </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="zoom.html">Zoom</a></li>
       <li><a href="index.html">Home</a></li>
+      <li class="active"><a href="zoom.html">Zoom</a></li>
+      <li><a href="help.html">Help</a></li>
     </ul>
   </div>
 </nav>
-<a href="https://zoom.us/join" class="btn btn-default">Goto Zoom Meeting</a>
-<iframe src="https://calendar.google.com/calendar/embed?height=500&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=bTU0dWYxMGk1aW52NGwxbmpxbjAyamhoZGtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23A79B8E" style="border:solid 1px #777" width="700" height="500" frameborder="0" scrolling="no"></iframe>
 
-<!--Start of Tawk.to Script-->
+    <div class="row">
+      <div class="center">
+        <iframe src="https://calendar.google.com/calendar/embed?height=500&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=bTU0dWYxMGk1aW52NGwxbmpxbjAyamhoZGtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23A79B8E" style="border:solid 1px #777" width="600" height="500" frameborder="0" scrolling="no"></iframe>
+        <iframe src="https://zoom.us/wc/join/5211571719?wpk=wcpkf9b0c66bea95710ec01b5ce997a920b2"  width="600" height="500"></iframe>
+
+      </div>
+    </div>
+
+
+  <!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
