--- a/zoom.html
+++ b/zoom.html
@@ -27,8 +27,10 @@
     <div class="row">
       <div class="center">
         <iframe src="https://calendar.google.com/calendar/embed?height=500&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=bTU0dWYxMGk1aW52NGwxbmpxbjAyamhoZGtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23A79B8E" style="border:solid 1px #777" width="600" height="500" frameborder="0" scrolling="no"></iframe>
-        <iframe src="https://zoom.us/wc/join/5211571719?wpk=wcpkf9b0c66bea95710ec01b5ce997a920b2"  width="600" height="500"></iframe>
-
+        <h1>Sorry Right now this is out of order</h1>
+        <div class="iframe-container" style="overflow: hidden; padding-top: 56.25%; position: relative;">
+          <iframe allow="microphone; camera" style="border: 0; height: 100%; left: 0; position: absolute; top: 0; width: 100%;" src="https://zoom.us/wc/5211571719/join?prefer=1&un=Nonce frameborder="0"></iframe>
+        </div>
       </div>
     </div>
 
