--- a/zoom.html
+++ b/zoom.html
@@ -24,6 +24,8 @@
   </div>
 </nav>
 
+	<a href="https://us04web.zoom.us/wc/join/76506558132?wpk=wcpk9a2d2792a9cfeba79b5e60fc2c8c8451?pwd=3R6dHJ">Zoom Meeting</a>
+
     <div class="row">
       <div class="center">
         <iframe src="https://calendar.google.com/calendar/embed?height=500&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FChicago&amp;src=bTU0dWYxMGk1aW52NGwxbmpxbjAyamhoZGtAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23A79B8E" style="border:solid 1px #777" width="600" height="500" frameborder="0" scrolling="no"></iframe>
