--- a/zoom.html
+++ b/zoom.html
@@ -24,7 +24,7 @@
   </div>
 </nav>
 
-	<a href="https://us04web.zoom.us/wc/join/76506558132?wpk=wcpk9a2d2792a9cfeba79b5e60fc2c8c8451?pwd=3R6dHJ">Zoom Meeting</a>
+	<a href="https://us04web.zoom.us/wc/join/76506558132?pwd=3R6dHJ">Zoom Meeting</a>
 
     <div class="row">
       <div class="center">
